<resources>
    <string name="app_name">HW04_Gymlog_V3.0.0</string>
    <string name="excercise">Exercise: </string>
    <string name="enter_an_exercise">Enter an exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a weight</string>
    <string name="enter_reps">Enter reps</string>
    <string name="reps">Reps</string>
    <string name="log">LOG!</string>
</resources>